fix: scroll bar squeezing space
This will cause the head to shift when a page with scrollbars switches to a page without scrollbars.

--- a/assets/css/_partial/_header.scss
+++ b/assets/css/_partial/_header.scss
@@ -1,5 +1,5 @@
 header {
-  width: 100%;
+  width: 100vw;
   z-index: 150;
   background-color: $header-background-color;
   @include transition(box-shadow 0.3s ease);
